--- a/.github/workflows/自动部署代理节点.yml
+++ b/.github/workflows/自动部署代理节点.yml
@@ -265,13 +265,13 @@ jobs:
       run: |
         # 基础环境变量
         cf set-env ${{ env.APP_NAME }} NAME "SAP"
-        cf set-env ${{ env.APP_NAME }} UUID "${{ secrets.UUID }}"
+        cf set-env ${{ env.APP_NAME }} UUID "${{ secrets.c664b94e-8636-48a6-b9da-7f0c49544124 }}"
         cf set-env ${{ env.APP_NAME }} NEZHA_SERVER "${{ secrets.NEZHA_SERVER }}"
         cf set-env ${{ env.APP_NAME }} NEZHA_PORT "${{ secrets.NEZHA_PORT }}"
         cf set-env ${{ env.APP_NAME }} NEZHA_KEY "${{ secrets.NEZHA_KEY }}"
         cf set-env ${{ env.APP_NAME }} ARGO_PORT "${{ secrets.ARGO_PORT }}"
-        cf set-env ${{ env.APP_NAME }} ARGO_DOMAIN "${{ secrets.ARGO_DOMAIN }}"
-        cf set-env ${{ env.APP_NAME }} ARGO_AUTH "${{ secrets.ARGO_AUTH }}"
+        cf set-env ${{ env.APP_NAME }} ARGO_DOMAIN "${{ secrets.sapdfggngf-1.cooking200.dpdns.org }}"
+        cf set-env ${{ env.APP_NAME }} ARGO_AUTH "${{ secrets.eyJhIjoiMGY5NGU0Njk1NGRiYWNkNWE2NTE0NTlhNDQ0NzE0YzUiLCJ0IjoiZmFhMzZlYjQtYzIxYy00ODhjLWI1YjUtMTgyNmZjZGFmMmRkIiwicyI6Ill6SmtPV0kxTkRRdE9USXhZUzAwWW1VNUxUazJaVE10WW1WalkyVTRNV016TlRJMyJ9 }}"
         cf set-env ${{ env.APP_NAME }} SUB_PATH "${{ secrets.SUB_PATH }}"
         cf set-env ${{ env.APP_NAME }} CFIP "${{ secrets.CFIP || 'cf.877774.xyz' }}"
         cf set-env ${{ env.APP_NAME }} CFPORT "${{ secrets.CFPORT }}"
